update to 1.1 wcr

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,17 @@
     <string name="plain_text">Plain Text</string>
     <string name="enter_text_for_reversion">Enter text for reversion</string>
     <string name="reversed_text">Reversed Text</string>
-    <string name="reversed_text_will_appear_here">&#032;&#032;Reversed Text Will Appear Here</string>
-    <string name="_0_5x">0.5X</string>
-    <string name="_1x">1x</string>
-    <string name="_2x">2x</string>
-    <string name="_3x">3x</string>
+    <string name="reversed_text_will_appear_here">Reversed Text Will Appear Here</string>
     <string name="speech_speed">Speech Speed</string>
     <string name="pitch_level">Pitch Level</string>
-    <string name="_0_5">0.5</string>
-    <string name="_1_5">1.5</string>
-    <string name="_1">1</string>
-    <string name="max_19">Max 19</string>
+    <string name="max_19">Max 5 / Min 0.1</string>
     <string name="about">About</string>
+    <string name="play_normal">Play Normal</string>
+    <string name="play_reverse">Play Reverse</string>
+    <string name="save_speech_output_to_file">Save Speech Output To File</string>
+    <string name="save_file_to_sdcard">Save File To /sdcard/</string>
+    <string name="speak_o_back_default">SOB (default)</string>
+    <string name="filename_format">Filename Format :</string>
+    <string name="use_long_date_format">Use Long Date Format</string>
+    <string name="use_simple_date_format">Use Simple Date Format</string>
 </resources>
